# sdkwork-news

./: .env.postgres.example  .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork.app.config.json  tsconfig.base.json  tsconfig.json  vitest.config.ts
.sdkwork/: README.md
.sdkwork/plugins/: README.md
.sdkwork/skills/: README.md
apis/: README.md
apis/_registry/: news-professional-api.operations.json
apps/: README.md
apps/sdkwork-news-common/: README.md
apps/sdkwork-news-pc/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
config/desktop/: news.development.toml.example
config/server/: news.development.toml.example
configs/: README.md  sdkwork-api-cloud-gateway.news.development.toml  sdkwork-api-cloud-gateway.news.production.toml
configs/topology/: cloud.development.env  cloud.production.env  cloud.split-services.development.env  cloud.split-services.production.env  (+8 more)
crates/: README.md
crates/sdkwork-api-news-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-news-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-news-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-content-news-repository-sqlx/: Cargo.toml  README.md
crates/sdkwork-content-news-repository-sqlx/migrations/: 0002_news_industry_foundation.sql  0003_news_personalization_foundation.sql  0005_news_trust_correction_foundation.sql  0007_news_professional_newsroom_foundation.sql  DEPRECATED.md
crates/sdkwork-content-news-repository-sqlx/schema/: README.md  news-professional-schema.registry.json
crates/sdkwork-content-news-repository-sqlx/specs/: README.md  component.spec.json
crates/sdkwork-content-news-repository-sqlx/src/: bootstrap.rs  config.rs  helpers.rs  lib.rs  manifest.rs  models.rs  professional_schema.rs  store.rs
crates/sdkwork-content-news-repository-sqlx/src/repository/: external_feed_repository.rs  mod.rs  newsletter_repository.rs  paywall_repository.rs  professional_repository.rs
crates/sdkwork-content-news-repository-sqlx/tests/: external_feed_repository_test.rs  news_professional_schema_registry.rs  news_storage_standard.rs  newsletter_repository_test.rs  paywall_repository_test.rs  professional_repository_test.rs
crates/sdkwork-content-news-service/: Cargo.toml  README.md
crates/sdkwork-content-news-service/specs/: README.md  component.spec.json
crates/sdkwork-content-news-service/src/: domain.rs  lib.rs  professional.rs
crates/sdkwork-content-news-service/src/service/: compliance_policy_service.rs  editorial_workflow_service.rs  feed_personalization_service.rs  import_export_service.rs  media_attachment_service.rs  mod.rs  story_service.rs  trust_service.rs
crates/sdkwork-content-news-service/tests/: compliance_policy_service_test.rs  editorial_workflow_service_test.rs  feed_personalization_service_test.rs  import_export_service_test.rs  media_attachment_service_test.rs  news_core_standard.rs  news_professional_skeleton.rs  story_service_test.rs  test_helpers.rs  trust_service_test.rs
crates/sdkwork-news-api-server/: Cargo.toml
crates/sdkwork-news-api-server/src/: http_route_manifest.rs  main.rs  readiness.rs  web_bootstrap.rs
crates/sdkwork-news-api-server/src/bootstrap/: mod.rs
crates/sdkwork-news-api-server/src/handlers/: health.rs  mod.rs  open.rs
crates/sdkwork-news-api-server/src/routes/: mod.rs
crates/sdkwork-news-database-host/: Cargo.toml
crates/sdkwork-news-database-host/src/: lib.rs
crates/sdkwork-news-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-news-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-news-standalone-gateway/: Cargo.toml
crates/sdkwork-news-standalone-gateway/src/: http_route_manifest.rs  main.rs
crates/sdkwork-news-standalone-gateway/src/bootstrap/: mod.rs
crates/sdkwork-news-standalone-gateway/src/handlers/: app.rs  backend.rs  open.rs
crates/sdkwork-news-storage-sqlx-rust/: Cargo.toml  README.md
crates/sdkwork-news-storage-sqlx-rust/migrations/: 0001_news_foundation.sql  0004_news_alert_digest_foundation.sql  0006_news_live_coverage_foundation.sql
crates/sdkwork-news-storage-sqlx-rust/specs/: README.md  component.spec.json
crates/sdkwork-news-storage-sqlx-rust/src/: lib.rs
crates/sdkwork-news-storage-sqlx-rust/tests/: news_storage_standard.rs
crates/sdkwork-router-news-open-api/: Cargo.toml  README.md
crates/sdkwork-router-news-open-api/specs/: README.md  component.spec.json
crates/sdkwork-router-news-open-api/src/: lib.rs  web_bootstrap.rs
crates/sdkwork-router-news-open-api/tests/: route_standard.rs
crates/sdkwork-routes-news-backend-api/: Cargo.toml  README.md
crates/sdkwork-routes-news-backend-api/specs/: README.md  component.spec.json
crates/sdkwork-routes-news-backend-api/src/: lib.rs  routes.rs
crates/sdkwork-routes-news-backend-api/src/handlers/: backend.rs  mod.rs  professional_handlers.rs
crates/sdkwork-routes-news-backend-api/tests/: route_standard.rs
crates/sdkwork-routes-news-open-api/: Cargo.toml  README.md
crates/sdkwork-routes-news-open-api/specs/: README.md  component.spec.json
crates/sdkwork-routes-news-open-api/src/: http_route_manifest.rs  lib.rs  routes.rs  state.rs  web_bootstrap.rs
crates/sdkwork-routes-news-open-api/src/handlers/: mod.rs  open.rs  professional_handlers.rs
crates/sdkwork-routes-news-open-api/tests/: route_standard.rs
database/: README.md  database.manifest.json
deployments/: README.md
docs/: INDEX.yaml  README.md  news-professional-engineering-skeleton.md
etc/: sdkwork-api-cloud-gateway.news.development.toml  sdkwork-api-cloud-gateway.news.production.toml
examples/: README.md
jobs/: README.md
plugins/: README.md
scripts/: README.md
sdks/: README.md
specs/: README.md  component.spec.json  topology.spec.json
tests/: README.md
tools/: README.md  materialize_news_database_contract.mjs  news_openapi_export.mjs  news_professional_registry_export.mjs  news_schema_quality_gate.mjs  news_sdk_generate.mjs  news_sdk_generator_runner.mjs
(+111 files in other folders)
