[workspace]
members = [
    "crates/sdkwork-content-news-service",
    "crates/sdkwork-content-news-repository-sqlx",
    "crates/sdkwork-content-news-worker",
    "crates/sdkwork-router-news-open-api",
    "crates/sdkwork-router-news-app-api",
    "crates/sdkwork-router-news-backend-api",
    "crates/sdkwork-news-api-server",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
# Internal SDKWork workspace members - declared once at workspace root
sdkwork-content-news-service = { path = "crates/sdkwork-content-news-service" }
sdkwork-content-news-repository-sqlx = { path = "crates/sdkwork-content-news-repository-sqlx" }
sdkwork-content-news-worker = { path = "crates/sdkwork-content-news-worker" }
sdkwork-router-news-open-api = { path = "crates/sdkwork-router-news-open-api" }
sdkwork-router-news-app-api = { path = "crates/sdkwork-router-news-app-api" }
sdkwork-router-news-backend-api = { path = "crates/sdkwork-router-news-backend-api" }
sdkwork-news-api-server = { path = "crates/sdkwork-news-api-server" }

