[workspace]
members = [
    "crates/sdkwork-content-news-service",
    "crates/sdkwork-news-database-host",
    "crates/sdkwork-content-news-repository-sqlx",
    "crates/sdkwork-content-news-worker",
    "crates/sdkwork-router-news-open-api",
    "crates/sdkwork-router-news-app-api",
    "crates/sdkwork-router-news-backend-api",
    "crates/sdkwork-news-api-server",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
sdkwork-news-database-host = { path = "crates/sdkwork-news-database-host" }
sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config", package = "sdkwork-database-config" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle", package = "sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi", package = "sdkwork-database-spi" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx", package = "sdkwork-database-sqlx" }
sdkwork_database_config = { path = "../sdkwork-database/crates/sdkwork-database-config", package = "sdkwork-database-config" }
sdkwork_database_lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle", package = "sdkwork-database-lifecycle" }
sdkwork_database_spi = { path = "../sdkwork-database/crates/sdkwork-database-spi", package = "sdkwork-database-spi" }
sdkwork_database_sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx", package = "sdkwork-database-sqlx" }
# Internal SDKWork workspace members - declared once at workspace root
sdkwork-content-news-service = { path = "crates/sdkwork-content-news-service" }
sdkwork-content-news-repository-sqlx = { path = "crates/sdkwork-content-news-repository-sqlx" }
sdkwork-content-news-worker = { path = "crates/sdkwork-content-news-worker" }
sdkwork-router-news-open-api = { path = "crates/sdkwork-router-news-open-api" }
sdkwork-router-news-app-api = { path = "crates/sdkwork-router-news-app-api" }
sdkwork-router-news-backend-api = { path = "crates/sdkwork-router-news-backend-api" }
sdkwork-news-api-server = { path = "crates/sdkwork-news-api-server" }

