[package]
name = "sdkwork-api-news-assembly"
edition.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-news application HTTP plane."

[lib]
name = "sdkwork_api_news_assembly"
path = "src/lib.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
sdkwork-news-database-host = { workspace = true }
sdkwork-database-sqlx = { workspace = true }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite"] }
sdkwork-routes-news-app-api.workspace = true
sdkwork-routes-news-backend-api.workspace = true
sdkwork-routes-news-open-api.workspace = true
