[package]
name = "sdkwork-news-database-host"
version.workspace = true
edition.workspace = true
description = "SDKWork News database lifecycle bootstrap."

[lib]
name = "sdkwork_news_database_host"
path = "src/lib.rs"

[dependencies]
dotenvy = "0.15"
sdkwork-database-config = { workspace = true }
sdkwork-database-lifecycle = { workspace = true }
sdkwork-database-spi = { workspace = true }
sdkwork-database-sqlx = { workspace = true }
