[package]
name = "sdkwork-news-gateway-assembly"
edition.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-news application HTTP plane."

[lib]
name = "sdkwork_news_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
sdkwork_routes_news_app_api = { package = "sdkwork-routes-news-app-api", path = "../sdkwork-routes-news-app-api" }
sdkwork_routes_news_backend_api = { package = "sdkwork-routes-news-backend-api", path = "../sdkwork-routes-news-backend-api" }
sdkwork_routes_news_open_api = { package = "sdkwork-routes-news-open-api", path = "../sdkwork-routes-news-open-api" }
