[package]
name = "sdkwork-news-standalone-gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sdkwork-news-standalone-gateway"
path = "src/main.rs"

[dependencies]
sdkwork_news_gateway_assembly = { package = "sdkwork-news-gateway-assembly", path = "../sdkwork-news-gateway-assembly" }
sdkwork-content-news-service = { path = "../sdkwork-content-news-service" }
sdkwork-content-news-repository-sqlx = { path = "../sdkwork-content-news-repository-sqlx" }
sdkwork-database-config = { workspace = true }
sdkwork-database-sqlx = { workspace = true }
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite"] }
anyhow = "1"
dotenvy = "0.15"
sdkwork-iam-web-adapter = { workspace = true }
sdkwork-web-axum = { workspace = true }
sdkwork-web-core = { workspace = true }
sdkwork-web-bootstrap = { workspace = true }

