[package]
name = "sdkwork-news-storage-sqlx-rust"
version.workspace = true
edition.workspace = true

[lib]
name = "sdkwork_news_storage_sqlx"
path = "src/lib.rs"

[dependencies]
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "postgres"] }

[dev-dependencies]
tokio = { version = "1.51", features = ["macros", "rt-multi-thread"] }
