[package]
name = "sdkwork-routes-news-backend-api"
version.workspace = true
edition.workspace = true

[lib]
name = "sdkwork_routes_news_backend_api"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite"] }
tracing = "0.1"
sdkwork_routes_news_open_api = { package = "sdkwork-routes-news-open-api", path = "../sdkwork-routes-news-open-api" }
