[package]
name = "sdkwork-routes-news-open-api"
version.workspace = true
edition.workspace = true

[lib]
name = "sdkwork_routes_news_open_api"
path = "src/lib.rs"

[dependencies]
sdkwork-web-core = { path = "../../../sdkwork-web-framework/crates/sdkwork-web-core" }
axum = { version = "0.8", default-features = false, features = ["json"] }
sdkwork-iam-web-adapter = { path = "../../../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork-web-axum = { path = "../../../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-web-bootstrap = { workspace = true }

[dev-dependencies]
sdkwork-web-core = { path = "../../../sdkwork-web-framework/crates/sdkwork-web-core" }
