[package]
name = "sdkwork-routes-news-open-api"
version.workspace = true
edition.workspace = true

[lib]
name = "sdkwork_routes_news_open_api"
path = "src/lib.rs"

[dependencies]
sdkwork-web-core = { workspace = true }
axum = { version = "0.8", default-features = false, features = ["json", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite"] }
tracing = "0.1"
sdkwork-iam-web-adapter = { workspace = true }
sdkwork-web-axum = { workspace = true }
sdkwork-web-bootstrap = { workspace = true }

[dev-dependencies]
sdkwork-web-core = { workspace = true }
